[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/clock_corrupt_back.png" type="Texture" id=2]
[ext_resource path="res://Assets/clock_corrupt.png" type="Texture" id=3]
[ext_resource path="res://Assets/clock_corrupt_handle.png" type="Texture" id=4]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 33
octaves = 6
persistence = 0.25

[sub_resource type="NoiseTexture" id=2]
width = 96
height = 720
noise = SubResource( 1 )

[sub_resource type="OpenSimplexNoise" id=3]
seed = 33
octaves = 6
persistence = 0.25

[sub_resource type="NoiseTexture" id=4]
width = 96
height = 720
noise = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.2, 0.8, 1 )
colors = PoolColorArray( 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1280

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 5 )
width = 720

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="C" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TP" type="TextureProgress" parent="C"]
visible = false
anchor_bottom = 1.0
margin_right = 64.0
step = 0.01
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 4 )
fill_mode = 3
tint_under = Color( 0.752941, 0, 1, 1 )

[node name="C" type="Control" parent="C"]
margin_left = 148.0
margin_top = 128.0
margin_right = 188.0
margin_bottom = 168.0
__meta__ = {
"_edit_group_": true
}

[node name="Back" type="Sprite" parent="C/C"]
scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 2 )

[node name="Clock" type="Sprite" parent="C/C"]
texture = ExtResource( 3 )

[node name="Handle" type="Sprite" parent="C/C"]
position = Vector2( -5, 0 )
texture = ExtResource( 4 )
offset = Vector2( 5, 0 )

[node name="HandleTween" type="Tween" parent="C/C"]

[node name="BackTween" type="Tween" parent="C/C"]

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 1088.0
margin_right = 1280.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
text = "click me"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 1088.0
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 704.0

[node name="CorruptTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="BonusCorruptTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="CC" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="C" type="Control" parent="CC"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Sprite" type="Sprite" parent="CC/C"]
texture = SubResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="Control" type="Control" parent="CC/C"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 89.9999

[node name="Sprite2" type="Sprite" parent="CC/C/Control"]
texture = SubResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 720, 1280 )

[node name="CCTween" type="Tween" parent="CC"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
[connection signal="tween_completed" from="C/C/BackTween" to="." method="_on_BackTween_tween_completed"]
[connection signal="timeout" from="CorruptTimer" to="." method="_on_CorruptTimer_timeout"]
[connection signal="timeout" from="BonusCorruptTimer" to="." method="_on_BonusCorruptTimer_timeout"]
